--- a/.eslintrc
+++ b/.eslintrc
@@ -7,10 +7,13 @@
     "plugin:prettier/recommended"
   ],
   "rules": {
+    "react/jsx-props-no-spreading": [0],
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "react/prefer-stateless-function": [2],
-    "prettier/prettier": "error",
-    "no-unused-vars": "warn",
+    "react/prop-types": [0],
+    // "prettier/prettier": "error",
+    "consistent-return": "off",
+    // "no-unused-vars": "warn",
     "no-console": "off"
   },
   "env": {
