--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,8 @@
 {
-  "printWidth": 90,
+  "printWidth": 80,
   "semi": false,
   "trailingComma": "es5",
   "singleQuote": true,
-  "tabWidth": 2
+  "tabWidth": 2,
+  "arrowParens": "avoid"
 }
