--- a/package.json
+++ b/package.json
@@ -38,10 +38,11 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
   "devDependencies": {
-    "eslint": "7.2.0",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb": "18.2.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-import": "^2.21.2",
